--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,9 +26,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
+        with:
+          persist-credentials: false
       - name: Build and push
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@main
+        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
           repository: ${{ env.REGISTRY_IMAGE }}
           context: .
